Added more code inspection fixes.